--- a/index.html
+++ b/index.html
@@ -1,44 +1,26 @@
 <!DOCTYPE html>
 <html lang="ko">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
     <!-- SEO적용 -->
-    <meta name="mobile-web-app-capable" content="yes" />
-    <meta name="format-detection" content="telephone=no" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta
-      name="description"
-      content="아라리움, 육지해양동물과 함께하는 우리만의 공간"
-    />
-    <meta
-      name="keywords"
-      content="아라리움, ararium, 아마존, 아쿠아리움, 육지해양동물, 육지동물, 바다동물, 심해어"
-    />
-    <meta property="og:title" content="아라리움" />
-    <meta
-      property="keyword"
-      content="아라리움, ararium, 아마존, 아쿠아리움, 육지해양동물, 육지동물, 바다동물, 심해어"
-    />
-    <meta property="og:url" content="https://ararium.com/" />
-    <meta property="og:image" content="https://ararium.com/img/url_image.jpg" />
-    <meta
-      property="og:description"
-      content="아라리움, 육지해양동물과 함께하는 우리만의 공간"
-    />
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="아라리움" />
-    <meta name="twitter:url" content="https://ararium.com/" />
-    <meta name="twitter:image" content="https://ararium.com/img/logo.png" />
-    <meta
-      name="twitter:description"
-      content="아라리움, 육지해양동물과 함께하는 우리만의 공간"
-    />
+    <meta name="mobile-web-app-capable" content="yes"/>
+    <meta name="format-detection" content="telephone=no"/>
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta name="description" content="아라리움, 육지해양동물과 함께하는 우리만의 공간"/>
+    <meta name="keywords" content="아라리움, ararium, 아마존, 아쿠아리움, 육지해양동물, 육지동물, 바다동물, 심해어"/>
+    <meta property="og:title" content="아라리움"/>
+    <meta property="keyword" content="아라리움, ararium, 아마존, 아쿠아리움, 육지해양동물, 육지동물, 바다동물, 심해어"/>
+    <meta property="og:url" content="https://ararium.com/"/>
+    <meta property="og:image" content="https://ararium.com/img/url_image.jpg"/>
+    <meta property="og:description" content="아라리움, 육지해양동물과 함께하는 우리만의 공간"/>
+    <meta name="twitter:card" content="summary"/>
+    <meta name="twitter:title" content="아라리움"/>
+    <meta name="twitter:url" content="https://ararium.com/"/>
+    <meta name="twitter:image" content="https://ararium.com/img/logo.png"/>
+    <meta name="twitter:description" content="아라리움, 육지해양동물과 함께하는 우리만의 공간"/>
     <!-- favicon -->
-    <link rel="stortcut icon" href="images/favi.png" type="image/x-icon" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no"
-    />
+    <link rel="stortcut icon" href="images/favi.png" type="image/x-icon"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no"/>
     <title>아라리움</title>
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -48,39 +30,30 @@
       })(window,document,'script','dataLayer','GTM-5GG22SJX');</script>
       <!-- End Google Tag Manager -->
     <!-- swiper 링크 -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
     <!-- fontawesome -->
-    <script
-      src="https://kit.fontawesome.com/e2b37e629b.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/e2b37e629b.js" crossorigin="anonymous"></script>
     <!-- aos -->
-    <link rel="stylesheet" href="css/aos.css" />
+    <link rel="stylesheet" href="css/aos.css"/>
     <script src="js/aos.js"></script>
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-element-bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js" integrity="sha512-IQLehpLoVS4fNzl7IfH8Iowfm5+RiMGtHykgZJl9AWMgqx0AmJ6cRWcB+GaGVtIsnC4voMfm8f2vwtY+6oPjpQ==" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/ScrollToPlugin.min.js" integrity="sha512-nTHzMQK7lwWt8nL4KF6DhwLHluv6dVq/hNnj2PBN0xMl2KaMm1PM02csx57mmToPAodHmPsipoERRNn4pG7f+Q==" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/ScrollToPlugin.min.js" integrity="sha512-nTHzMQK7lwWt8nL4KF6DhwLHluv6dVq/hNnj2PBN0xMl2KaMm1PM02csx57mmToPAodHmPsipoERRNn4pG7f+Q==" crossorigin="anonymous"></script>
     <!-- swiper -->
-    <link rel="stylesheet" href="js/swiper/swiper.min.css" />
+    <link rel="stylesheet" href="js/swiper/swiper.min.css"/>
     <script src="js/swiper/swiper.min.js"></script>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css"/>
     <!-- XEIcon -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
     <!-- css -->
-    <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/reset.css"/>
+    <link rel="stylesheet" href="css/main.css"/>
     <!--[if lt IE 9]>
     <script src="js/respond.min.js"></script>
     <script src="js/html5shiv.js"></script>
-  [endif]-->
+    [endif]-->
     <script src="js/prefixfree.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
     <script src="js/header.js"></script>
@@ -90,11 +63,7 @@
     <script src="js/main_deep_sea_fish.js"></script>
     <script src="js/main_event.js"></script>
     <script src="js/main_quickmenu.js"></script>
-    <!-- --------- -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
   </head>
@@ -226,35 +195,20 @@
               </div>
             </div>
             <div class="banner_inner item-box" >
-              <div class="alpaka_gif item-img" id="ag_2" data-aos="fade-right" 
-              data-aos-offset="200" 
-              data-aos-easing="ease-out-cubic"
-              data-aos-duration="1000" 
-              data-aos-delay="1000">
+              <div class="alpaka_gif item-img" id="ag_2" data-aos="fade-right" data-aos-offset="200" data-aos-easing="ease-out-cubic" data-aos-duration="1000" data-aos-delay="1000">
                 <a href="#">
-                 <img src="images/ac.png" alt="움직이는알파카">
-                 <img src="images/achover.png" alt="움알" class="achover">
+                  <img src="images/ac.png" alt="움직이는알파카">
+                  <img src="images/achover.png" alt="움알" class="achover">
                 </a>
               </div>
-              <div class="banner-text" 
-              data-aos="flip-up" 
-              data-aos-offset="200" 
-                data-aos-easing="ease-out-cubic"
-                data-aos-duration="1000" >
+              <div class="banner-text" data-aos="flip-up" data-aos-offset="200" data-aos-easing="ease-out-cubic" data-aos-duration="1000">
                 <h2>육지 친구들 소개</h2>
                 <p>아라리움의 대표적인 육지 친구들을 소개합니다.</p>
               </div>
-              <div class="banner_list"  data-aos="fade-up" 
-                data-aos-offset="200" 
-                data-aos-easing="ease-out-cubic"
-                data-aos-duration="1000" 
-                data-aos-delay="300"
-                >
+              <div class="banner_list" data-aos="fade-up" data-aos-offset="200" data-aos-easing="ease-out-cubic" data-aos-duration="1000" data-aos-delay="300">
                 <ul class="slide_list">
                   <li>
-                    <span class="slide_dog"
-                      ><img src="images/dog.png" alt="프레리독"
-                    /></span>
+                    <span class="slide_dog"><img src="images/dog.png" alt="프레리독"/></span>
                     <dl>
                       <dt>프레리독</dt>
                       <dd>설치목 | 다람쥐과</dd>
@@ -262,9 +216,7 @@
                     <div class="slide_hide_dog" id="slide_hide"></div>
                   </li>
                   <li>
-                    <span class="slide_alpaca"
-                      ><img src="images/alpaca.png" alt="알파카"
-                    /></span>
+                    <span class="slide_alpaca"><img src="images/alpaca.png" alt="알파카"/></span>
                     <dl>
                       <dt>알파카</dt>
                       <dd>우제목 | 낙타과</dd>
@@ -272,9 +224,7 @@
                     <div class="slide_hide_alpa" id="slide_hide"></div>
                   </li>
                   <li>
-                    <span class="slide_pig"
-                      ><img src="images/pig.png" alt="기니피그"
-                    /></span>
+                    <span class="slide_pig"><img src="images/pig.png" alt="기니피그"/></span>
                     <dl>
                       <dt>기니피그</dt>
                       <dd>설치목 | 기니픽과</dd>
@@ -282,9 +232,7 @@
                     <div class="slide_hide_pig" id="slide_hide"></div>
                   </li>
                   <li>
-                    <span class="slide_rabbit"
-                      ><img src="images/rab.png" alt="토끼"
-                    /></span>
+                    <span class="slide_rabbit"><img src="images/rab.png" alt="토끼"/></span>
                     <dl>
                       <dt>토끼</dt>
                       <dd>토끼목 | 토끼과</dd>
@@ -292,9 +240,7 @@
                     <div class="slide_hide_rabbit" id="slide_hide"></div>
                   </li>
                   <li>
-                    <span class="slide_copi"
-                      ><img src="images/copi.png" alt="카피바라"
-                    /></span>
+                    <span class="slide_copi"><img src="images/copi.png" alt="카피바라"/></span>
                     <dl>
                       <dt>카피바라</dt>
                       <dd>설치목 | 카피바라과</dd>
@@ -302,9 +248,7 @@
                     <div class="slide_hide_copi" id="slide_hide"></div>
                   </li>
                   <li>
-                    <span class="slide_turtle"
-                      ><img src="images/cameleon.png" alt="거북"
-                    /></span>
+                    <span class="slide_turtle"><img src="images/cameleon.png" alt="거북"/></span>
                     <dl>
                       <dt>카멜레온</dt>
                       <dd>이구아나목 | 카멜레온과</dd>
@@ -312,9 +256,7 @@
                     <div class="slide_hide_turtle" id="slide_hide"></div>
                   </li>
                   <li>
-                    <span class="slide_toko"
-                      ><img src="images/toko.png" alt="토코투칸"
-                    /></span>
+                    <span class="slide_toko"><img src="images/toko.png" alt="토코투칸"/></span>
                     <dl>
                       <dt>토코투칸</dt>
                       <dd>딱따구리목 | 큰부리새과</dd>
@@ -322,9 +264,7 @@
                     <div class="slide_hide_toko" id="slide_hide"></div>
                   </li>
                   <li>
-                    <span class="slide_samak"
-                      ><img src="images/fox.png" alt="사막여우"/>
-                    </span>
+                    <span class="slide_samak"><img src="images/fox.png" alt="사막여우"/></span>
                     <dl>
                       <dt>사막여우</dt>
                       <dd>식육목 | 개과</dd>
@@ -332,9 +272,7 @@
                     <div class="slide_hide_samak" id="slide_hide"></div>
                   </li>
                   <li>
-                    <span class="slide_hong"
-                      ><img src="images/hong.png"" alt="홍학"/>
-                      </span>
+                    <span class="slide_hong"><img src="images/hong.png"" alt="홍학"/></span>
                     <dl>
                       <dt>홍학</dt>
                       <dd>홍학목 | 홍학과</dd>
@@ -342,9 +280,7 @@
                     <div class="slide_hide_hong" id="slide_hide"></div>
                   </li>
                   <li>
-                    <span class="slide_namu"
-                      ><img src="images/namunamu.png" alt="나무늘보"
-                    /></span>
+                    <span class="slide_namu"><img src="images/namunamu.png" alt="나무늘보"/></span>
                     <dl>
                       <dt>나무늘보</dt>
                       <dd>빈치목 | 나무늘보과</dd>
@@ -352,9 +288,7 @@
                     <div class="slide_hide_namu" id="slide_hide"></div>
                   </li>
                   <li>
-                    <span class="slide_racoon">
-                      <img src="images/racoon.png" alt="라쿤" />
-                    </span>
+                    <span class="slide_racoon"><img src="images/racoon.png" alt="라쿤" /></span>
                     <dl>
                       <dt>라쿤</dt>
                       <dd>식육목 | 너구리과</dd>
@@ -362,9 +296,7 @@
                     <div class="slide_hide_racoon" id="slide_hide"></div>
                   </li>
                   <li>
-                    <span class="slide_wang"
-                      ><img src="images/wang.png" alt="왕관앵무"
-                    /></span>
+                    <span class="slide_wang"><img src="images/wang.png" alt="왕관앵무"/></span>
                     <dl>
                       <dt>왕관앵무</dt>
                       <dd>앵무목 | 앵무과</dd>
@@ -372,9 +304,7 @@
                     <div class="slide_hide_wang" id="slide_hide"></div>
                   </li>
                   <li>
-                    <span class="slide_cat"
-                      ><img src="images/meerkat.png" alt="미어캣"
-                    /></span>
+                    <span class="slide_cat"><img src="images/meerkat.png" alt="미어캣"/></span>
                     <dl>
                       <dt>미어캣</dt>
                       <dd>식육목 | 사향삵과</dd>
@@ -382,9 +312,7 @@
                     <div class="slide_hide_cat" id="slide_hide"></div>
                   </li>
                   <li>
-                    <span class="slide_cheong"
-                      ><img src="images/macaw.png" alt="청금강 앵무"
-                    /></span>
+                    <span class="slide_cheong"><img src="images/macaw.png" alt="청금강 앵무"/></span>
                     <dl>
                       <dt>청금강 앵무</dt>
                       <dd>앵무목 | 앵무과</dd>
@@ -392,9 +320,7 @@
                     <div class="slide_hide_cheong" id="slide_hide"></div>
                   </li>
                   <li>
-                    <span class="slide_arma"
-                      ><img src="images/armadill.png" alt="청금강 앵무"
-                    /></span>
+                    <span class="slide_arma"><img src="images/armadill.png" alt="청금강 앵무"/></span>
                     <dl>
                       <dt>아르마딜로</dt>
                       <dd>빈치목 | 아르마딜로과</dd>
@@ -472,14 +398,12 @@
         <!-- 바다동물 소개 -->
         <section class="marineanimal clearfix">
           <div class="inner">
-
             <div id="bb-outer"data-aos="fade-right">
               <div class="bubbles" >
-                              <h2>바다 친구들 소개</h2>
-                            </div>
-                            <p>바다속에는 어떤 친구들이 살고 있을까요?</p>
-                          </div>
-
+                <h2>바다 친구들 소개</h2>
+              </div>
+              <p>바다속에는 어떤 친구들이 살고 있을까요?</p>
+            </div>
             <ul class="fishs">
               <li class="0">
                 <div class="bubbles"></div>
